add canvas stuff

--- a/src/ui/pages/traffic/traffic.html
+++ b/src/ui/pages/traffic/traffic.html
@@ -1,4 +1,4 @@
-${message}
+
 
 <h3>Mouse coords</h3>
 X:${mouseX}
@@ -11,3 +11,5 @@ Y:${mouseY}
 </div>
 
 <div></div>
+
+<canvas ref="canvasRef" height="500" width="500"></canvas>
