--- a/src/my-app.html
+++ b/src/my-app.html
@@ -1,6 +1,10 @@
 <import from="./ui/pages/traffic/traffic"></import>
+<import from="./ui/pages/learning/learningCanvas/learningCanvas"></import>
 
-<traffic></traffic>
+
+<!-- <traffic></traffic> -->
+<learning-canvas></learning-canvas>
+
 <!-- <svg width="100" height="200">
   <rect width="100" height="200" style="stroke-width:1; stroke:rgb(0,0,0); fill:none;" />
 </svg> -->
