--- a/src/my-app.html
+++ b/src/my-app.html
@@ -1,8 +1,9 @@
 <import from="./ui/pages/traffic/traffic"></import>
 <import from="./ui/pages/learning/learningCanvas/learningCanvas"></import>
+<import from="./ui/pages/learning/learningPixi/learningPixi"></import>
 
-
-<traffic></traffic>
+<learning-pixi></learning-pixi>
+<!-- <traffic></traffic> -->
 <!-- <learning-canvas></learning-canvas> -->
 
 <!-- <svg width="100" height="200">
